// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders components/checkbox/demo/basic.tsx extend context correctly 1`] = `
<label
  class="g-checkbox-wrapper css-var-test-id g-checkbox-css-var"
>
  <span
    class="g-checkbox g-wave-target"
  >
    <input
      class="g-checkbox-input"
      type="checkbox"
    />
  </span>
  <span
    class="g-checkbox-label"
  >
    Checkbox
  </span>
</label>
`;

exports[`renders components/checkbox/demo/basic.tsx extend context correctly 2`] = `[]`;

exports[`renders components/checkbox/demo/check-all.tsx extend context correctly 1`] = `
Array [
  <label
    class="g-checkbox-wrapper css-var-test-id g-checkbox-css-var"
  >
    <span
      class="g-checkbox g-checkbox-indeterminate g-wave-target"
    >
      <input
        class="g-checkbox-input"
        type="checkbox"
      />
    </span>
    <span
      class="g-checkbox-label"
    >
      Check all
    </span>
  </label>,
  <div
    class="g-divider css-var-test-id g-divider-horizontal g-divider-rail"
    role="separator"
  />,
  <div
    class="g-checkbox-group css-var-test-id g-checkbox-css-var"
    role="group"
  >
    <label
      class="g-checkbox-wrapper g-checkbox-wrapper-checked g-checkbox-group-item css-var-test-id g-checkbox-css-var"
    >
      <span
        class="g-checkbox g-wave-target g-checkbox-checked"
      >
        <input
          checked=""
          class="g-checkbox-input"
          type="checkbox"
          value="Apple"
        />
      </span>
      <span
        class="g-checkbox-label"
      >
        Apple
      </span>
    </label>
    <label
      class="g-checkbox-wrapper g-checkbox-group-item css-var-test-id g-checkbox-css-var"
    >
      <span
        class="g-checkbox g-wave-target"
      >
        <input
          class="g-checkbox-input"
          type="checkbox"
          value="Pear"
        />
      </span>
      <span
        class="g-checkbox-label"
      >
        Pear
      </span>
    </label>
    <label
      class="g-checkbox-wrapper g-checkbox-wrapper-checked g-checkbox-group-item css-var-test-id g-checkbox-css-var"
    >
      <span
        class="g-checkbox g-wave-target g-checkbox-checked"
      >
        <input
          checked=""
          class="g-checkbox-input"
          type="checkbox"
          value="Orange"
        />
      </span>
      <span
        class="g-checkbox-label"
      >
        Orange
      </span>
    </label>
  </div>,
]
`;

exports[`renders components/checkbox/demo/check-all.tsx extend context correctly 2`] = `[]`;

exports[`renders components/checkbox/demo/controller.tsx extend context correctly 1`] = `
Array [
  <p
    style="margin-bottom: 20px;"
  >
    <label
      class="g-checkbox-wrapper g-checkbox-wrapper-checked css-var-test-id g-checkbox-css-var"
    >
      <span
        class="g-checkbox g-wave-target g-checkbox-checked"
      >
        <input
          checked=""
          class="g-checkbox-input"
          type="checkbox"
        />
      </span>
      <span
        class="g-checkbox-label"
      >
        Checked-Enabled
      </span>
    </label>
  </p>,
  <p>
    <button
      class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
      type="button"
    >
      <span>
        Uncheck
      </span>
    </button>
    <button
      class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
      style="margin: 0px 10px;"
      type="button"
    >
      <span>
        Disable
      </span>
    </button>
  </p>,
]
`;

exports[`renders components/checkbox/demo/controller.tsx extend context correctly 2`] = `[]`;

exports[`renders components/checkbox/demo/custom-line-width.tsx extend context correctly 1`] = `
Array [
  <label
    class="g-checkbox-wrapper g-checkbox-wrapper-checked css-var-test-id g-checkbox-css-var"
  >
    <span
      class="g-checkbox g-wave-target g-checkbox-checked"
    >
      <input
        checked=""
        class="g-checkbox-input"
        type="checkbox"
      />
    </span>
  </label>,
  <label
    class="g-checkbox-wrapper css-var-test-id g-checkbox-css-var"
  >
    <span
      class="g-checkbox g-wave-target"
    >
      <input
        class="g-checkbox-input"
        type="checkbox"
      />
    </span>
  </label>,
  <label
    class="g-checkbox-wrapper g-checkbox-wrapper-checked css-var-test-id g-checkbox-css-var"
  >
    <span
      class="g-checkbox g-wave-target g-checkbox-checked"
    >
      <input
        checked=""
        class="g-checkbox-input"
        type="checkbox"
      />
    </span>
  </label>,
  <label
    class="g-checkbox-wrapper css-var-test-id g-checkbox-css-var"
  >
    <span
      class="g-checkbox g-wave-target"
    >
      <input
        class="g-checkbox-input"
        type="checkbox"
      />
    </span>
  </label>,
]
`;

exports[`renders components/checkbox/demo/custom-line-width.tsx extend context correctly 2`] = `[]`;

exports[`renders components/checkbox/demo/debug-disable-popover.tsx extend context correctly 1`] = `
<div
  style="padding: 56px;"
>
  <label
    class="g-checkbox-wrapper g-checkbox-wrapper-checked g-checkbox-wrapper-disabled css-var-test-id g-checkbox-css-var"
  >
    <span
      class="g-checkbox g-wave-target g-checkbox-checked g-checkbox-disabled"
    >
      <input
        aria-describedby="test-id"
        checked=""
        class="g-checkbox-input"
        disabled=""
        type="checkbox"
      />
    </span>
  </label>
  <div
    class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popover-placement-top"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div
      class="g-popover-arrow"
      style="position: absolute; bottom: 0px; left: 0px;"
    >
      <span
        class="g-popover-arrow-content"
      />
    </div>
    <div
      class="g-popover-container"
      id="test-id"
      role="tooltip"
    >
      <div
        class="g-popover-content"
      >
        xxxx
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/checkbox/demo/debug-disable-popover.tsx extend context correctly 2`] = `[]`;

exports[`renders components/checkbox/demo/debug-group-width.tsx extend context correctly 1`] = `
<div
  style="width: 280px; border: 1px solid rgb(238, 238, 238); padding: 16px;"
>
  <div
    class="g-checkbox-group css-var-test-id g-checkbox-css-var"
    role="group"
  >
    <label
      class="g-checkbox-wrapper g-checkbox-wrapper-checked g-checkbox-group-item css-var-test-id g-checkbox-css-var"
    >
      <span
        class="g-checkbox g-wave-target g-checkbox-checked"
      >
        <input
          checked=""
          class="g-checkbox-input"
          type="checkbox"
          value="a"
        />
      </span>
      <span
        class="g-checkbox-label"
      >
        Short
      </span>
    </label>
    <label
      class="g-checkbox-wrapper g-checkbox-group-item css-var-test-id g-checkbox-css-var"
    >
      <span
        class="g-checkbox g-wave-target"
      >
        <input
          class="g-checkbox-input"
          type="checkbox"
          value="b"
        />
      </span>
      <span
        class="g-checkbox-label"
      >
        Long label that may wrap in narrow container
      </span>
    </label>
    <label
      class="g-checkbox-wrapper g-checkbox-group-item css-var-test-id g-checkbox-css-var"
    >
      <span
        class="g-checkbox g-wave-target"
      >
        <input
          class="g-checkbox-input"
          type="checkbox"
          value="c"
        />
      </span>
      <span
        class="g-checkbox-label"
      >
        Medium
      </span>
    </label>
  </div>
</div>
`;

exports[`renders components/checkbox/demo/debug-group-width.tsx extend context correctly 2`] = `[]`;

exports[`renders components/checkbox/demo/debug-line.tsx extend context correctly 1`] = `
<div>
  <div
    class="g-space g-space-horizontal g-space-align-center g-space-gap-row-small g-space-gap-col-small css-var-test-id"
    style="border: 1px solid red; margin-bottom: 16px;"
  >
    <div
      class="g-space-item"
    >
      <label
        class="g-checkbox-wrapper css-var-test-id g-checkbox-css-var"
      >
        <span
          class="g-checkbox g-wave-target"
        >
          <input
            class="g-checkbox-input"
            type="checkbox"
            value="light"
          />
        </span>
      </label>
    </div>
    <div
      class="g-space-item"
    >
      <div>
        Bamboo
      </div>
    </div>
    <div
      class="g-space-item"
    >
      <label
        class="g-checkbox-wrapper css-var-test-id g-checkbox-css-var"
      >
        <span
          class="g-checkbox g-wave-target"
        >
          <input
            class="g-checkbox-input"
            type="checkbox"
            value="little"
          />
        </span>
        <span
          class="g-checkbox-label"
        >
          Little
        </span>
      </label>
    </div>
  </div>
  <div
    class="g-space g-space-horizontal g-space-align-center g-space-gap-row-small g-space-gap-col-small css-var-test-id"
    style="border: 1px solid red; margin-bottom: 16px;"
  >
    <div
      class="g-space-item"
    >
      <label
        class="g-radio-wrapper css-var-test-id g-radio-css-var"
      >
        <span
          class="g-radio g-wave-target"
        >
          <input
            class="g-radio-input"
            type="radio"
            value="light"
          />
        </span>
      </label>
    </div>
    <div
      class="g-space-item"
    >
      <div>
        Bamboo
      </div>
    </div>
    <div
      class="g-space-item"
    >
      <label
        class="g-radio-wrapper css-var-test-id g-radio-css-var"
      >
        <span
          class="g-radio g-wave-target"
        >
          <input
            class="g-radio-input"
            type="radio"
            value="little"
          />
        </span>
        <span
          class="g-radio-label"
        >
          Little
        </span>
      </label>
    </div>
  </div>
  <div
    style="border: 1px solid red; margin-bottom: 16px; display: flex; align-items: center;"
  >
    <label
      class="g-checkbox-wrapper css-var-test-id g-checkbox-css-var"
    >
      <span
        class="g-checkbox g-wave-target"
      >
        <input
          class="g-checkbox-input"
          type="checkbox"
          value="light"
        />
      </span>
    </label>
    <div>
      Bamboo
    </div>
    <label
      class="g-checkbox-wrapper css-var-test-id g-checkbox-css-var"
    >
      <span
        class="g-checkbox g-wave-target"
      >
        <input
          class="g-checkbox-input"
          type="checkbox"
          value="little"
        />
      </span>
      <span
        class="g-checkbox-label"
      >
        Little
      </span>
    </label>
  </div>
  <div
    style="border: 1px solid red; margin-bottom: 16px; display: flex; align-items: center;"
  >
    <label
      class="g-radio-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio g-wave-target"
      >
        <input
          class="g-radio-input"
          type="radio"
          value="light"
        />
      </span>
    </label>
    <div>
      Bamboo
    </div>
    <label
      class="g-radio-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio g-wave-target"
      >
        <input
          class="g-radio-input"
          type="radio"
          value="little"
        />
      </span>
      <span
        class="g-radio-label"
      >
        Little
      </span>
    </label>
  </div>
  <div>
    <label
      class="g-checkbox-wrapper css-var-test-id g-checkbox-css-var"
    >
      <span
        class="g-checkbox g-wave-target"
      >
        <input
          class="g-checkbox-input"
          type="checkbox"
        />
      </span>
      <span
        class="g-checkbox-label"
      >
        Aligned
      </span>
    </label>
  </div>
  <div>
    <label
      class="g-checkbox-wrapper css-var-test-id g-checkbox-css-var"
    >
      <span
        class="g-checkbox g-wave-target"
      >
        <input
          class="g-checkbox-input"
          type="checkbox"
        />
      </span>
      <span
        class="g-checkbox-label"
      >
        <span
          style="font-size: 32px;"
        >
          Aligned
        </span>
      </span>
    </label>
  </div>
</div>
`;

exports[`renders components/checkbox/demo/debug-line.tsx extend context correctly 2`] = `
[
  "Warning: [antd: Checkbox] \`value\` is not a valid prop, do you mean \`checked\`?",
]
`;

exports[`renders components/checkbox/demo/disabled.tsx extend context correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-stretch g-flex-gap-medium g-flex-vertical"
>
  <label
    class="g-checkbox-wrapper g-checkbox-wrapper-disabled css-var-test-id g-checkbox-css-var"
  >
    <span
      class="g-checkbox g-wave-target g-checkbox-disabled"
    >
      <input
        class="g-checkbox-input"
        disabled=""
        type="checkbox"
      />
    </span>
  </label>
  <label
    class="g-checkbox-wrapper g-checkbox-wrapper-disabled css-var-test-id g-checkbox-css-var"
  >
    <span
      class="g-checkbox g-checkbox-indeterminate g-wave-target g-checkbox-disabled"
    >
      <input
        class="g-checkbox-input"
        disabled=""
        type="checkbox"
      />
    </span>
  </label>
  <label
    class="g-checkbox-wrapper g-checkbox-wrapper-checked g-checkbox-wrapper-disabled css-var-test-id g-checkbox-css-var"
  >
    <span
      class="g-checkbox g-wave-target g-checkbox-checked g-checkbox-disabled"
    >
      <input
        checked=""
        class="g-checkbox-input"
        disabled=""
        type="checkbox"
      />
    </span>
  </label>
</div>
`;

exports[`renders components/checkbox/demo/disabled.tsx extend context correctly 2`] = `[]`;

exports[`renders components/checkbox/demo/group.tsx extend context correctly 1`] = `
Array [
  <div
    class="g-checkbox-group css-var-test-id g-checkbox-css-var"
    role="group"
  >
    <label
      class="g-checkbox-wrapper g-checkbox-wrapper-checked g-checkbox-group-item css-var-test-id g-checkbox-css-var"
    >
      <span
        class="g-checkbox g-wave-target g-checkbox-checked"
      >
        <input
          checked=""
          class="g-checkbox-input"
          type="checkbox"
          value="Apple"
        />
      </span>
      <span
        class="g-checkbox-label"
      >
        Apple
      </span>
    </label>
    <label
      class="g-checkbox-wrapper g-checkbox-group-item css-var-test-id g-checkbox-css-var"
    >
      <span
        class="g-checkbox g-wave-target"
      >
        <input
          class="g-checkbox-input"
          type="checkbox"
          value="Pear"
        />
      </span>
      <span
        class="g-checkbox-label"
      >
        Pear
      </span>
    </label>
    <label
      class="g-checkbox-wrapper g-checkbox-group-item css-var-test-id g-checkbox-css-var"
    >
      <span
        class="g-checkbox g-wave-target"
      >
        <input
          class="g-checkbox-input"
          type="checkbox"
          value="Orange"
        />
      </span>
      <span
        class="g-checkbox-label"
      >
        Orange
      </span>
    </label>
  </div>,
  <br />,
  <br />,
  <div
    class="g-checkbox-group css-var-test-id g-checkbox-css-var"
    role="group"
  >
    <label
      class="g-checkbox-wrapper g-checkbox-group-item label-1 css-var-test-id g-checkbox-css-var"
    >
      <span
        class="g-checkbox g-wave-target"
      >
        <input
          class="g-checkbox-input"
          type="checkbox"
          value="Apple"
        />
      </span>
      <span
        class="g-checkbox-label"
      >
        Apple
      </span>
    </label>
    <label
      class="g-checkbox-wrapper g-checkbox-wrapper-checked g-checkbox-group-item label-2 css-var-test-id g-checkbox-css-var"
    >
      <span
        class="g-checkbox g-wave-target g-checkbox-checked"
      >
        <input
          checked=""
          class="g-checkbox-input"
          type="checkbox"
          value="Pear"
        />
      </span>
      <span
        class="g-checkbox-label"
      >
        Pear
      </span>
    </label>
    <label
      class="g-checkbox-wrapper g-checkbox-group-item label-3 css-var-test-id g-checkbox-css-var"
    >
      <span
        class="g-checkbox g-wave-target"
      >
        <input
          class="g-checkbox-input"
          type="checkbox"
          value="Orange"
        />
      </span>
      <span
        class="g-checkbox-label"
      >
        Orange
      </span>
    </label>
  </div>,
  <br />,
  <br />,
  <div
    class="g-checkbox-group css-var-test-id g-checkbox-css-var"
    role="group"
  >
    <label
      class="g-checkbox-wrapper g-checkbox-wrapper-checked g-checkbox-wrapper-disabled g-checkbox-group-item label-1 css-var-test-id g-checkbox-css-var"
    >
      <span
        class="g-checkbox g-wave-target g-checkbox-checked g-checkbox-disabled"
      >
        <input
          checked=""
          class="g-checkbox-input"
          disabled=""
          type="checkbox"
          value="Apple"
        />
      </span>
      <span
        class="g-checkbox-label"
      >
        Apple
      </span>
    </label>
    <label
      class="g-checkbox-wrapper g-checkbox-wrapper-disabled g-checkbox-group-item label-2 css-var-test-id g-checkbox-css-var"
    >
      <span
        class="g-checkbox g-wave-target g-checkbox-disabled"
      >
        <input
          class="g-checkbox-input"
          disabled=""
          type="checkbox"
          value="Pear"
        />
      </span>
      <span
        class="g-checkbox-label"
      >
        Pear
      </span>
    </label>
    <label
      class="g-checkbox-wrapper g-checkbox-wrapper-disabled g-checkbox-group-item label-3 css-var-test-id g-checkbox-css-var"
    >
      <span
        class="g-checkbox g-wave-target g-checkbox-disabled"
      >
        <input
          class="g-checkbox-input"
          disabled=""
          type="checkbox"
          value="Orange"
        />
      </span>
      <span
        class="g-checkbox-label"
      >
        Orange
      </span>
    </label>
  </div>,
]
`;

exports[`renders components/checkbox/demo/group.tsx extend context correctly 2`] = `[]`;

exports[`renders components/checkbox/demo/layout.tsx extend context correctly 1`] = `
<div
  class="g-checkbox-group css-var-test-id g-checkbox-css-var"
  role="group"
  style="width: 100%;"
>
  <div
    class="g-row css-var-test-id"
  >
    <div
      class="g-col g-col-8 css-var-test-id"
    >
      <label
        class="g-checkbox-wrapper css-var-test-id g-checkbox-css-var"
      >
        <span
          class="g-checkbox g-wave-target"
        >
          <input
            class="g-checkbox-input"
            type="checkbox"
            value="A"
          />
        </span>
        <span
          class="g-checkbox-label"
        >
          A
        </span>
      </label>
    </div>
    <div
      class="g-col g-col-8 css-var-test-id"
    >
      <label
        class="g-checkbox-wrapper css-var-test-id g-checkbox-css-var"
      >
        <span
          class="g-checkbox g-wave-target"
        >
          <input
            class="g-checkbox-input"
            type="checkbox"
            value="B"
          />
        </span>
        <span
          class="g-checkbox-label"
        >
          B
        </span>
      </label>
    </div>
    <div
      class="g-col g-col-8 css-var-test-id"
    >
      <label
        class="g-checkbox-wrapper css-var-test-id g-checkbox-css-var"
      >
        <span
          class="g-checkbox g-wave-target"
        >
          <input
            class="g-checkbox-input"
            type="checkbox"
            value="C"
          />
        </span>
        <span
          class="g-checkbox-label"
        >
          C
        </span>
      </label>
    </div>
    <div
      class="g-col g-col-8 css-var-test-id"
    >
      <label
        class="g-checkbox-wrapper css-var-test-id g-checkbox-css-var"
      >
        <span
          class="g-checkbox g-wave-target"
        >
          <input
            class="g-checkbox-input"
            type="checkbox"
            value="D"
          />
        </span>
        <span
          class="g-checkbox-label"
        >
          D
        </span>
      </label>
    </div>
    <div
      class="g-col g-col-8 css-var-test-id"
    >
      <label
        class="g-checkbox-wrapper css-var-test-id g-checkbox-css-var"
      >
        <span
          class="g-checkbox g-wave-target"
        >
          <input
            class="g-checkbox-input"
            type="checkbox"
            value="E"
          />
        </span>
        <span
          class="g-checkbox-label"
        >
          E
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`renders components/checkbox/demo/layout.tsx extend context correctly 2`] = `[]`;

exports[`renders components/checkbox/demo/style-class.tsx extend context correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-stretch g-flex-gap-medium g-flex-vertical"
>
  <label
    class="g-checkbox-wrapper css-var-test-id g-checkbox-css-var"
  >
    <span
      class="g-checkbox g-wave-target"
      style="border-radius: 6px;"
    >
      <input
        class="g-checkbox-input"
        type="checkbox"
      />
    </span>
    <span
      class="g-checkbox-label"
      style="color: blue;"
    >
      Object styles
    </span>
  </label>
  <label
    class="g-checkbox-wrapper g-checkbox-wrapper-checked acss-1q9j8js css-var-test-id g-checkbox-css-var"
  >
    <span
      class="g-checkbox acss-1sy50lm acss-1s66ip5 g-wave-target g-checkbox-checked"
    >
      <input
        checked=""
        class="g-checkbox-input"
        type="checkbox"
      />
    </span>
    <span
      class="g-checkbox-label acss-eesh8g acss-37hybm"
    >
      Function styles
    </span>
  </label>
</div>
`;

exports[`renders components/checkbox/demo/style-class.tsx extend context correctly 2`] = `[]`;
